--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,3 +67,4 @@ flutter:
   assets:
     - assets/images/logos/gtsLogo.png
     - assets/images/logos/google.png
+    - assets/images/logos/apple.png
