--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   firebase_auth: ^4.9.0
   cloud_firestore: ^4.9.1
   google_sign_in: ^6.1.5
-  intl:
+  intl: ^0.18.1
+  flutter_local_notifications: ^15.1.1
 
 
 dev_dependencies:
