--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.1.5
   intl: ^0.18.1
   flutter_local_notifications: ^15.1.1
+  timezone: ^0.9.2
 
 
 dev_dependencies:
